--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ eth-hash[pycryptodome]==0.2.0
 eth-utils==1.9.0
 hexbytes==0.2.1
 hypothesis==5.16.2
+lxml==4.5.1
 prompt-toolkit==3.0.5
 psutil>=5.7.0,<6.0.0
 py>=1.5.0
 py-solc-ast>=1.2.4,<2.0.0
 py-solc-x>=0.10.0,<1.0.0
+pycobertura==0.10.5
 pygments==2.6.1
 pytest==5.4.3
 pytest-xdist==1.32.0
