--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ eth-hash[pycryptodome]==0.2.0
 eth-utils==1.9.5
 hexbytes==0.2.1
 hypothesis==5.41.3
+ipython>=7.18.1,<8.0.0
 prompt-toolkit==3.0.8
 psutil>=5.7.3,<6.0.0
 py>=1.5.0
