--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -166,6 +166,8 @@ python-dateutil==2.8.1
     # via
     #   mythx-models
     #   pythx
+python-dotenv==0.16.0
+    # via -r requirements.in
 pythx==1.7.1
     # via -r requirements.in
 pyyaml==5.4.1
@@ -222,7 +224,7 @@ vyper==0.2.11
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
-web3==5.17.0
+web3==5.18.0
     # via -r requirements.in
 websockets==8.1
     # via web3
