--- a/requirements.in
+++ b/requirements.in
@@ -16,9 +16,9 @@ pygments<3
 pytest-xdist<2
 pytest<7
 python-dotenv>=0.16.0,<0.17.0
-pythx<2
+pythx>=1.7.1,<2
 pyyaml>=5.3.0,<6
-requests>=2.25.0,<3
+requests>=2.25.1,<3
 rlp<2
 semantic-version<3
 tqdm<5
