--- a/requirements.in
+++ b/requirements.in
@@ -16,7 +16,7 @@ pygments<3
 pytest-xdist<2
 pytest<7
 python-dotenv>=0.16.0,<0.17.0
-pythx>=1.7.1,<2
+git+https://github.com/dmuhs/pythx#egg=pythx
 pyyaml>=5.3.0,<6
 requests>=2.25.1,<3
 rlp<2
