chore: recompile requirement files

--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -313,6 +313,8 @@ websockets==8.1
     # via
     #   -r requirements.txt
     #   web3
+wrapt==1.12.1
+    # via -r requirements.txt
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
