fix: Added hostname to ganache-cli config

--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -115,6 +115,7 @@ development:
     cmd: ganache-cli
     host: http://127.0.0.1
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 12000000
       accounts: 10
@@ -146,6 +147,7 @@ development:
     host: http://127.0.0.1
     timeout: 120
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 12000000
       accounts: 10
@@ -158,6 +160,7 @@ development:
     host: http://127.0.0.1
     timeout: 120
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 12000000
       accounts: 10
@@ -170,6 +173,7 @@ development:
     host: http://127.0.0.1
     timeout: 120
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 12000000
       accounts: 10
@@ -182,6 +186,7 @@ development:
     host: http://127.0.0.1
     timeout: 120
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 20000000
       accounts: 10
@@ -194,6 +199,7 @@ development:
     host: http://127.0.0.1
     timeout: 120
     cmd_settings:
+      host: 127.0.0.1
       port: 8545
       gas_limit: 20000000
       accounts: 10
