--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ build/
 coverage.xml
 dist/
 docs/_build
-venv/
+venv*/
 env/
 *egg-info/
 .tox/
@@ -17,3 +17,4 @@ env/
 .DS_Store
 .hypothesis/
 .env
+c_pytest.py
