chore: add boba

--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -92,6 +92,20 @@ live:
         id: bsc-main
         host: https://bsc-dataseed.binance.org
         explorer: https://api.bscscan.com/api
+  - name: Boba
+    networks:
+      - name: Testnet
+        chainid: 28
+        id: boba-test
+        host: https://rinkeby.boba.network
+        explorer: https://blockexplorer.rinkeby.boba.network/api
+        multicall2: "0xeD188A73c442Df375b19b7b8f394a15a2b851BB5"
+      - name: Mainnet
+        chainid: 288
+        id: boba-main
+        host: https://mainnet.boba.network
+        explorer: https://blockexplorer.boba.network/api
+        multicall2: "0xbe2Be647F8aC42808E67431B4E1D6c19796bF586"
   - name: Fantom Opera
     networks:
       - name: Testnet
