add anvil and docker build caching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     volumes:
       - .:/code
     command: tail -f /dev/null
+    # TODO: load this from an environment variable so M1 macs can easily use this
+    platform: linux/x86_64
