--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -20,7 +20,7 @@ async-timeout==4.0.2
     # via
     #   -r requirements.txt
     #   aiohttp
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -31,17 +31,17 @@ base58==2.1.1
     # via
     #   -r requirements.txt
     #   multiaddr
-bitarray==1.2.2
+bitarray==2.6.0
     # via
     #   -r requirements.txt
     #   eth-account
-black==22.3.0
+black==22.6.0
     # via -r requirements.txt
-certifi==2022.5.18.1
+certifi==2022.6.15
     # via
     #   -r requirements.txt
     #   requests
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -50,9 +50,9 @@ click==8.1.3
     # via
     #   -r requirements.txt
     #   black
-colorama==0.4.4
+colorama==0.4.5
     # via -r requirements-windows.in
-cytoolz==0.11.2
+cytoolz==0.12.0
     # via
     #   -r requirements.txt
     #   eth-keyfile
@@ -63,20 +63,20 @@ dataclassy==0.11.1
     #   eip712
 eip712==0.1.0
     # via -r requirements.txt
-eth-abi==2.1.1
+eth-abi==2.2.0
     # via
     #   -r requirements.txt
     #   eip712
     #   eth-account
     #   eth-event
     #   web3
-eth-account==0.5.7
+eth-account==0.5.9
     # via
     #   -r requirements.txt
     #   web3
 eth-event==1.2.3
     # via -r requirements.txt
-eth-hash[pycryptodome]==0.3.2
+eth-hash[pycryptodome]==0.3.3
     # via
     #   -r requirements.txt
     #   eth-event
@@ -95,6 +95,7 @@ eth-rlp==0.2.1
     # via
     #   -r requirements.txt
     #   eth-account
+    #   web3
 eth-typing==2.3.0
     # via
     #   -r requirements.txt
@@ -119,7 +120,7 @@ execnet==1.9.0
     # via
     #   -r requirements.txt
     #   pytest-xdist
-frozenlist==1.3.0
+frozenlist==1.3.1
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -159,7 +160,7 @@ jsonschema==3.2.0
     #   web3
 lazy-object-proxy==1.7.1
     # via -r requirements.txt
-lru-dict==1.1.7
+lru-dict==1.1.8
     # via
     #   -r requirements.txt
     #   web3
@@ -204,7 +205,7 @@ pluggy==1.0.0
     # via
     #   -r requirements.txt
     #   pytest
-prompt-toolkit==3.0.29
+prompt-toolkit==3.0.30
     # via -r requirements.txt
 protobuf==3.20.1
     # via
@@ -221,7 +222,7 @@ py-solc-ast==1.2.9
     # via -r requirements.txt
 py-solc-x==1.1.1
     # via -r requirements.txt
-pycryptodome==3.14.1
+pycryptodome==3.15.0
     # via
     #   -r requirements.txt
     #   eip712
@@ -268,7 +269,7 @@ pythx==1.6.1
     # via -r requirements.txt
 pyyaml==5.4.1
     # via -r requirements.txt
-requests==2.27.1
+requests==2.28.1
     # via
     #   -r requirements.txt
     #   ipfshttpclient
@@ -308,13 +309,13 @@ tomli==2.0.1
     # via
     #   -r requirements.txt
     #   black
-toolz==0.11.2
+toolz==0.12.0
     # via
     #   -r requirements.txt
     #   cytoolz
 tqdm==4.64.0
     # via -r requirements.txt
-urllib3==1.26.9
+urllib3==1.26.11
     # via
     #   -r requirements.txt
     #   requests
@@ -324,13 +325,13 @@ varint==1.0.2
     #   multiaddr
 vvm==0.1.0
     # via -r requirements.txt
-vyper==0.3.3
+vyper==0.3.6
     # via -r requirements.txt
 wcwidth==0.2.5
     # via
     #   -r requirements.txt
     #   prompt-toolkit
-web3==5.29.1
+web3==5.30.0
     # via -r requirements.txt
 websockets==9.1
     # via
@@ -342,7 +343,7 @@ wheel==0.37.1
     #   vyper
 wrapt==1.14.1
     # via -r requirements.txt
-yarl==1.7.2
+yarl==1.8.1
     # via
     #   -r requirements.txt
     #   aiohttp
