--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ asttokens==2.0.5
     # via vyper
 async-timeout==4.0.2
     # via aiohttp
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   aiohttp
     #   hypothesis
@@ -20,19 +20,19 @@ attrs==21.4.0
     #   pytest
 base58==2.1.1
     # via multiaddr
-bitarray==1.2.2
+bitarray==2.6.0
     # via eth-account
-black==22.3.0
+black==22.6.0
     # via -r requirements.in
-certifi==2022.5.18.1
+certifi==2022.6.15
     # via requests
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via
     #   aiohttp
     #   requests
 click==8.1.3
     # via black
-cytoolz==0.11.2
+cytoolz==0.12.0
     # via
     #   eth-keyfile
     #   eth-utils
@@ -40,20 +40,20 @@ dataclassy==0.11.1
     # via eip712
 eip712==0.1.0
     # via -r requirements.in
-eth-abi==2.1.1
+eth-abi==2.2.0
     # via
     #   -r requirements.in
     #   eip712
     #   eth-account
     #   eth-event
     #   web3
-eth-account==0.5.7
+eth-account==0.5.9
     # via
     #   -r requirements.in
     #   web3
 eth-event==1.2.3
     # via -r requirements.in
-eth-hash[pycryptodome]==0.3.2
+eth-hash[pycryptodome]==0.3.3
     # via
     #   -r requirements.in
     #   eth-event
@@ -69,6 +69,7 @@ eth-rlp==0.2.1
     # via
     #   -r requirements.in
     #   eth-account
+    #   web3
 eth-typing==2.3.0
     # via
     #   eip712
@@ -90,7 +91,7 @@ eth-utils==1.10.0
     #   web3
 execnet==1.9.0
     # via pytest-xdist
-frozenlist==1.3.0
+frozenlist==1.3.1
     # via
     #   aiohttp
     #   aiosignal
@@ -122,7 +123,7 @@ jsonschema==3.2.0
     #   web3
 lazy-object-proxy==1.7.1
     # via -r requirements.in
-lru-dict==1.1.7
+lru-dict==1.1.8
     # via web3
 multiaddr==0.0.9
     # via ipfshttpclient
@@ -146,7 +147,7 @@ platformdirs==2.5.2
     # via black
 pluggy==1.0.0
     # via pytest
-prompt-toolkit==3.0.29
+prompt-toolkit==3.0.30
     # via -r requirements.in
 protobuf==3.20.1
     # via web3
@@ -161,7 +162,7 @@ py-solc-ast==1.2.9
     # via -r requirements.in
 py-solc-x==1.1.1
     # via -r requirements.in
-pycryptodome==3.14.1
+pycryptodome==3.15.0
     # via
     #   eip712
     #   eth-hash
@@ -198,7 +199,7 @@ pythx==1.6.1
     # via -r requirements.in
 pyyaml==5.4.1
     # via -r requirements.in
-requests==2.27.1
+requests==2.28.1
     # via
     #   -r requirements.in
     #   ipfshttpclient
@@ -231,21 +232,21 @@ toml==0.10.2
     # via pytest
 tomli==2.0.1
     # via black
-toolz==0.11.2
+toolz==0.12.0
     # via cytoolz
 tqdm==4.64.0
     # via -r requirements.in
-urllib3==1.26.9
+urllib3==1.26.11
     # via requests
 varint==1.0.2
     # via multiaddr
 vvm==0.1.0
     # via -r requirements.in
-vyper==0.3.3
+vyper==0.3.6
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
-web3==5.29.1
+web3==5.30.0
     # via -r requirements.in
 websockets==9.1
     # via web3
@@ -253,7 +254,7 @@ wheel==0.37.1
     # via vyper
 wrapt==1.14.1
     # via -r requirements.in
-yarl==1.7.2
+yarl==1.8.1
     # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
