chore: update network config with new parameter

--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -195,6 +195,7 @@ development:
     host: http://127.0.0.1
     cmd_settings:
       port: 8545
+      evm_version: istanbul
   - name: Anvil (Mainnet Fork)
     id: anvil-fork
     cmd: anvil
