--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -125,6 +125,23 @@ live:
         host: https://api.harmony.one
         id: harmony-main
         multicall2: "0x3E01dD8a5E1fb3481F0F589056b428Fc308AF0Fb"
+  - name: Hedera
+    networks:
+      - name: Mainnet
+        chainid: 295
+        id: hedera-main
+        host: https://mainnet.hashio.io/api
+        explorer: https://hashscan.io/mainnet
+      - name: Testnet
+        chainid: 296
+        id: hedera-test
+        host: https://testnet.hashio.io/api
+        explorer: https://hashscan.io/testnet
+      - name: Previewnet
+        chainid: 297
+        id: hedera-preview
+        host: https://previewnet.hashio.io/api
+        explorer: https://hashscan.io/previewnet
   - name: Moonbeam
     networks:
       - name: Mainnet
@@ -134,7 +151,7 @@ live:
         explorer: https://api-moonbeam.moonscan.io/api
         multicall2: "0x1337BedC9D22ecbe766dF105c9623922A27963EC"
       - name: Moonbase Alpha
-        chainid: 1287 
+        chainid: 1287
         id: moonbeam-test
         host: https://moonbeam-alpha.api.onfinality.io/public
         explorer: https://api-moonbase.moonscan.io/api
