--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,12 +4,43 @@
 #
 #    pip-compile --resolver=backtracking requirements-dev.in
 #
+aiohttp==3.8.4
+    # via
+    #   -r requirements.txt
+    #   web3
+aiosignal==1.3.1
+    # via
+    #   -r requirements.txt
+    #   aiohttp
 alabaster==0.7.13
     # via sphinx
+asttokens==2.0.5
+    # via
+    #   -r requirements.txt
+    #   vyper
+async-timeout==4.0.2
+    # via
+    #   -r requirements.txt
+    #   aiohttp
 attrs==22.2.0
-    # via pytest
+    # via
+    #   -r requirements.txt
+    #   aiohttp
+    #   hypothesis
+    #   jsonschema
+    #   pytest
 babel==2.12.1
     # via sphinx
+base58==2.1.1
+    # via
+    #   -r requirements.txt
+    #   multiaddr
+bitarray==2.7.3
+    # via
+    #   -r requirements.txt
+    #   eth-account
+black==23.1.0
+    # via -r requirements-dev.in
 bleach==6.0.0
     # via readme-renderer
 build==0.10.0
@@ -21,19 +52,35 @@ bumpversion==0.6.0
 cachetools==5.3.0
     # via tox
 certifi==2022.12.7
-    # via requests
+    # via
+    #   -r requirements.txt
+    #   requests
 chardet==5.1.0
     # via tox
 charset-normalizer==3.1.0
-    # via requests
+    # via
+    #   -r requirements.txt
+    #   aiohttp
+    #   requests
 click==8.1.3
-    # via pip-tools
+    # via
+    #   black
+    #   pip-tools
 colorama==0.4.6
     # via tox
 coverage[toml]==7.2.2
     # via
     #   -r requirements-dev.in
     #   pytest-cov
+cytoolz==0.12.1
+    # via
+    #   -r requirements.txt
+    #   eth-keyfile
+    #   eth-utils
+dataclassy==0.11.1
+    # via
+    #   -r requirements.txt
+    #   eip712
 distlib==0.3.6
     # via virtualenv
 docutils==0.18.1
@@ -41,6 +88,61 @@ docutils==0.18.1
     #   readme-renderer
     #   sphinx
     #   sphinx-rtd-theme
+eip712==0.1.0
+    # via -r requirements.txt
+eth-abi==2.2.0
+    # via
+    #   -r requirements.txt
+    #   eip712
+    #   eth-account
+    #   eth-event
+    #   web3
+eth-account==0.5.9
+    # via
+    #   -r requirements.txt
+    #   web3
+eth-event==1.2.3
+    # via -r requirements.txt
+eth-hash[pycryptodome]==0.5.1
+    # via
+    #   -r requirements.txt
+    #   eth-event
+    #   eth-utils
+    #   web3
+eth-keyfile==0.5.1
+    # via
+    #   -r requirements.txt
+    #   eth-account
+eth-keys==0.3.4
+    # via
+    #   -r requirements.txt
+    #   eth-account
+    #   eth-keyfile
+eth-rlp==0.2.1
+    # via
+    #   -r requirements.txt
+    #   eth-account
+    #   web3
+eth-typing==2.3.0
+    # via
+    #   -r requirements.txt
+    #   eip712
+    #   eth-abi
+    #   eth-keys
+    #   eth-utils
+    #   web3
+eth-utils==1.9.5
+    # via
+    #   -r requirements.txt
+    #   eip712
+    #   eth-abi
+    #   eth-account
+    #   eth-event
+    #   eth-keyfile
+    #   eth-keys
+    #   eth-rlp
+    #   rlp
+    #   web3
 execnet==1.9.0
     # via pytest-xdist
 filelock==3.10.0
@@ -49,8 +151,26 @@ filelock==3.10.0
     #   virtualenv
 flake8==3.9.1
     # via -r requirements-dev.in
+frozenlist==1.3.3
+    # via
+    #   -r requirements.txt
+    #   aiohttp
+    #   aiosignal
+hexbytes==0.2.3
+    # via
+    #   -r requirements.txt
+    #   eip712
+    #   eth-account
+    #   eth-event
+    #   eth-rlp
+    #   web3
+hypothesis==6.27.3
+    # via -r requirements.txt
 idna==3.4
-    # via requests
+    # via
+    #   -r requirements.txt
+    #   requests
+    #   yarl
 imagesize==1.4.1
     # via sphinx
 importlib-metadata==6.1.0
@@ -58,16 +178,36 @@ importlib-metadata==6.1.0
     #   keyring
     #   sphinx
     #   twine
+inflection==0.5.0
+    # via
+    #   -r requirements.txt
+    #   mythx-models
+    #   pythx
 iniconfig==2.0.0
     # via pytest
+ipfshttpclient==0.8.0a2
+    # via
+    #   -r requirements.txt
+    #   web3
 isort==5.12.0
     # via -r requirements-dev.in
 jaraco-classes==3.2.3
     # via keyring
 jinja2==3.1.2
     # via sphinx
+jsonschema==3.2.0
+    # via
+    #   -r requirements.txt
+    #   mythx-models
+    #   web3
 keyring==23.13.1
     # via twine
+lazy-object-proxy==1.9.0
+    # via -r requirements.txt
+lru-dict==1.1.8
+    # via
+    #   -r requirements.txt
+    #   web3
 markdown-it-py==2.2.0
     # via rich
 markupsafe==2.1.2
@@ -78,48 +218,105 @@ mdurl==0.1.2
     # via markdown-it-py
 more-itertools==9.1.0
     # via jaraco-classes
+multiaddr==0.0.9
+    # via
+    #   -r requirements.txt
+    #   ipfshttpclient
+multidict==6.0.4
+    # via
+    #   -r requirements.txt
+    #   aiohttp
+    #   yarl
 mypy==0.720
     # via -r requirements-dev.in
 mypy-extensions==0.4.4
-    # via mypy
+    # via
+    #   black
+    #   mypy
+mythx-models==1.9.1
+    # via
+    #   -r requirements.txt
+    #   pythx
+netaddr==0.8.0
+    # via
+    #   -r requirements.txt
+    #   multiaddr
 packaging==23.0
     # via
+    #   black
     #   build
     #   pyproject-api
     #   pytest
     #   sphinx
     #   tox
+parsimonious==0.8.1
+    # via
+    #   -r requirements.txt
+    #   eth-abi
+pathspec==0.11.1
+    # via black
 pip-tools==6.12.3
     # via -r requirements-dev.in
 pkginfo==1.9.6
     # via twine
 platformdirs==3.1.1
     # via
+    #   black
     #   tox
     #   virtualenv
 pluggy==1.0.0
     # via
     #   pytest
     #   tox
+prompt-toolkit==3.0.38
+    # via -r requirements.txt
+protobuf==3.19.5
+    # via
+    #   -r requirements.txt
+    #   web3
+psutil==5.9.4
+    # via -r requirements.txt
 py==1.11.0
     # via
-    #   -c requirements.in
+    #   -r requirements.txt
     #   pytest
     #   pytest-forked
+py-solc-ast==1.2.9
+    # via -r requirements.txt
+py-solc-x==1.1.1
+    # via -r requirements.txt
 pycodestyle==2.7.0
     # via flake8
+pycryptodome==3.17
+    # via
+    #   -r requirements.txt
+    #   eip712
+    #   eth-hash
+    #   eth-keyfile
+    #   vyper
 pyflakes==2.3.1
     # via flake8
 pygments==2.14.0
     # via
-    #   -c requirements.in
+    #   -r requirements.txt
+    #   pygments-lexer-solidity
     #   readme-renderer
     #   rich
     #   sphinx
+pygments-lexer-solidity==0.7.0
+    # via -r requirements.txt
+pyjwt==1.7.1
+    # via
+    #   -r requirements.txt
+    #   pythx
 pyproject-api==1.5.1
     # via tox
 pyproject-hooks==1.0.0
     # via build
+pyrsistent==0.19.3
+    # via
+    #   -r requirements.txt
+    #   jsonschema
 pytest==6.2.5
     # via
     #   -r requirements-dev.in
@@ -135,26 +332,63 @@ pytest-mock==3.10.0
     # via -r requirements-dev.in
 pytest-xdist==1.34.0
     # via -r requirements-dev.in
+python-dateutil==2.8.1
+    # via
+    #   -r requirements.txt
+    #   mythx-models
+    #   pythx
+python-dotenv==0.16.0
+    # via -r requirements.txt
+pythx==1.6.1
+    # via -r requirements.txt
+pyyaml==5.4.1
+    # via -r requirements.txt
 readme-renderer==37.3
     # via twine
 requests==2.28.2
     # via
-    #   -c requirements.in
+    #   -r requirements.txt
+    #   ipfshttpclient
+    #   py-solc-x
+    #   pythx
     #   requests-toolbelt
     #   sphinx
     #   twine
+    #   vvm
+    #   web3
 requests-toolbelt==0.10.1
     # via twine
 rfc3986==2.0.0
     # via twine
 rich==13.3.2
     # via twine
+rlp==2.0.1
+    # via
+    #   -r requirements.txt
+    #   eth-account
+    #   eth-rlp
+semantic-version==2.10.0
+    # via
+    #   -r requirements.txt
+    #   py-solc-x
+    #   vvm
+    #   vyper
 six==1.16.0
     # via
+    #   -r requirements.txt
+    #   asttokens
     #   bleach
+    #   jsonschema
+    #   multiaddr
+    #   parsimonious
     #   pytest-xdist
+    #   python-dateutil
 snowballstemmer==2.2.0
     # via sphinx
+sortedcontainers==2.4.0
+    # via
+    #   -r requirements.txt
+    #   hypothesis
 sphinx==6.1.3
     # via
     #   -r requirements-dev.in
@@ -180,31 +414,67 @@ toml==0.10.2
     # via pytest
 tomli==2.0.1
     # via
+    #   black
     #   build
     #   coverage
     #   pyproject-api
     #   pyproject-hooks
     #   tox
+toolz==0.12.0
+    # via
+    #   -r requirements.txt
+    #   cytoolz
 tox==4.4.7
     # via -r requirements-dev.in
+tqdm==4.65.0
+    # via -r requirements.txt
 twine==4.0.2
     # via -r requirements-dev.in
 typed-ast==1.4.3
     # via mypy
 typing-extensions==4.5.0
-    # via mypy
+    # via
+    #   black
+    #   mypy
 urllib3==1.26.15
     # via
+    #   -r requirements.txt
     #   requests
     #   twine
+varint==1.0.2
+    # via
+    #   -r requirements.txt
+    #   multiaddr
 virtualenv==20.21.0
     # via tox
+vvm==0.1.0
+    # via -r requirements.txt
+vyper==0.3.7
+    # via -r requirements.txt
+wcwidth==0.2.6
+    # via
+    #   -r requirements.txt
+    #   prompt-toolkit
+web3==5.31.4
+    # via -r requirements.txt
 webencodings==0.5.1
     # via bleach
+websockets==9.1
+    # via
+    #   -r requirements.txt
+    #   web3
 wheel==0.40.0
     # via
     #   -r requirements-dev.in
+    #   -r requirements.txt
     #   pip-tools
+    #   vyper
+wrapt==1.15.0
+    # via -r requirements.txt
+yarl==1.8.2
+    # via
+    #   -r requirements.txt
+    #   aiohttp
 zipp==3.15.0
     # via importlib-metadata
 
