--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -40,7 +40,7 @@ bitarray==2.7.3
     #   -r requirements.txt
     #   eth-account
 black==23.1.0
-    # via -r requirements-dev.in
+    # via -r requirements.txt
 bleach==6.0.0
     # via readme-renderer
 build==0.10.0
@@ -64,6 +64,7 @@ charset-normalizer==3.1.0
     #   requests
 click==8.1.3
     # via
+    #   -r requirements.txt
     #   black
     #   pip-tools
 colorama==0.4.6
@@ -149,7 +150,7 @@ filelock==3.10.0
     # via
     #   tox
     #   virtualenv
-flake8==3.9.1
+flake8==6.0.0
     # via -r requirements-dev.in
 frozenlist==1.3.3
     # via
@@ -212,7 +213,7 @@ markdown-it-py==2.2.0
     # via rich
 markupsafe==2.1.2
     # via jinja2
-mccabe==0.6.1
+mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
@@ -227,10 +228,11 @@ multidict==6.0.4
     #   -r requirements.txt
     #   aiohttp
     #   yarl
-mypy==0.720
+mypy==1.1.1
     # via -r requirements-dev.in
-mypy-extensions==0.4.4
+mypy-extensions==1.0.0
     # via
+    #   -r requirements.txt
     #   black
     #   mypy
 mythx-models==1.9.1
@@ -243,6 +245,7 @@ netaddr==0.8.0
     #   multiaddr
 packaging==23.0
     # via
+    #   -r requirements.txt
     #   black
     #   build
     #   pyproject-api
@@ -254,13 +257,16 @@ parsimonious==0.8.1
     #   -r requirements.txt
     #   eth-abi
 pathspec==0.11.1
-    # via black
+    # via
+    #   -r requirements.txt
+    #   black
 pip-tools==6.12.3
     # via -r requirements-dev.in
 pkginfo==1.9.6
     # via twine
 platformdirs==3.1.1
     # via
+    #   -r requirements.txt
     #   black
     #   tox
     #   virtualenv
@@ -285,7 +291,7 @@ py-solc-ast==1.2.9
     # via -r requirements.txt
 py-solc-x==1.1.1
     # via -r requirements.txt
-pycodestyle==2.7.0
+pycodestyle==2.10.0
     # via flake8
 pycryptodome==3.17
     # via
@@ -294,7 +300,7 @@ pycryptodome==3.17
     #   eth-hash
     #   eth-keyfile
     #   vyper
-pyflakes==2.3.1
+pyflakes==3.0.1
     # via flake8
 pygments==2.14.0
     # via
@@ -414,9 +420,11 @@ toml==0.10.2
     # via pytest
 tomli==2.0.1
     # via
+    #   -r requirements.txt
     #   black
     #   build
     #   coverage
+    #   mypy
     #   pyproject-api
     #   pyproject-hooks
     #   tox
@@ -430,10 +438,9 @@ tqdm==4.65.0
     # via -r requirements.txt
 twine==4.0.2
     # via -r requirements-dev.in
-typed-ast==1.4.3
-    # via mypy
 typing-extensions==4.5.0
     # via
+    #   -r requirements.txt
     #   black
     #   mypy
 urllib3==1.26.15
