--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,16 @@ base58==2.1.1
     # via multiaddr
 bitarray==2.7.3
     # via eth-account
+black==23.1.0
+    # via -r requirements.in
 certifi==2022.12.7
     # via requests
 charset-normalizer==3.1.0
     # via
     #   aiohttp
     #   requests
+click==8.1.3
+    # via black
 cytoolz==0.12.1
     # via
     #   eth-keyfile
@@ -122,12 +126,20 @@ multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
+mypy-extensions==1.0.0
+    # via black
 mythx-models==1.9.1
     # via pythx
 netaddr==0.8.0
     # via multiaddr
+packaging==23.0
+    # via black
 parsimonious==0.8.1
     # via eth-abi
+pathspec==0.11.1
+    # via black
+platformdirs==3.1.1
+    # via black
 prompt-toolkit==3.0.38
     # via -r requirements.in
 protobuf==3.19.5
@@ -194,10 +206,14 @@ six==1.16.0
     #   python-dateutil
 sortedcontainers==2.4.0
     # via hypothesis
+tomli==2.0.1
+    # via black
 toolz==0.12.0
     # via cytoolz
 tqdm==4.65.0
     # via -r requirements.in
+typing-extensions==4.5.0
+    # via black
 urllib3==1.26.15
     # via requests
 varint==1.0.2
