use infura for Optimism

--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -152,7 +152,7 @@ live:
       - name: Mainnet
         chainid: 10
         id: optimism-main
-        host: https://mainnet.optimism.io
+        host:  https://optimism-mainnet.infura.io/v3/$WEB3_INFURA_PROJECT_ID
         explorer: https://api-optimistic.etherscan.io/api
         multicall2: "0x2DC0E2aa608532Da689e89e237dF582B783E552C"
       - name: Kovan
