fix scanner API url

--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -203,7 +203,7 @@ live:
   - name: Polygon zkEVM
     networks:
       - chainid: 1101
-        explorer: https://api-zkevm.polygonscan.com
+        explorer: https://api-zkevm.polygonscan.com/api
         host: https://zkevm-rpc.com
         id: zkevm-main
         name: Polygon zkEVM mainnet
