--- a/requirements.in
+++ b/requirements.in
@@ -20,7 +20,7 @@ pytest-xdist<2
 pytest<7
 python-dotenv>=0.16.0,<0.17.0
 pythx<=1.6.1
-pyyaml>=5.3.0,<6
+pyyaml>=6.0.1
 requests>=2.25.0,<3
 rlp<3
 semantic-version<3
