--- a/brownie/data/network-config.yaml
+++ b/brownie/data/network-config.yaml
@@ -178,11 +178,11 @@ live:
         host:  https://optimism-mainnet.infura.io/v3/$WEB3_INFURA_PROJECT_ID
         explorer: https://api-optimistic.etherscan.io/api
         multicall2: "0x2DC0E2aa608532Da689e89e237dF582B783E552C"
-      - name: Kovan
-        chainid: 69
+      - name: Goerli
+        chainid: 420
         id: optimism-test
-        host: https://kovan.optimism.io
-        explorer: https://api-kovan-optimistic.etherscan.io/api
+        host: https://goerli.optimism.io
+        explorer: https://api-goerli-optimism.etherscan.io/api
         multicall2: "0x2DC0E2aa608532Da689e89e237dF582B783E552C"
   - name: Polygon
     networks:
