chore: bump dev dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -33,15 +33,10 @@ commands =
 
 [testenv:lint]
 deps =
-    black==22.1.0
-    flake8==3.9.1
-    isort==5.8.0
-    mypy==0.720
+    -r{toxinidir}/requirements-dev.txt
 basepython=python3
 extras=linter
 commands =
     black --check {toxinidir}/brownie {toxinidir}/tests
     flake8 {toxinidir}/brownie {toxinidir}/tests
     isort --check-only --diff {toxinidir}/brownie {toxinidir}/tests --skip brownie/__init__.py
-    mypy --disallow-untyped-defs {toxinidir}/brownie/convert {toxinidir}/brownie/network {toxinidir}/brownie/project
-    mypy --allow-untyped-defs {toxinidir}/brownie
