--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,31 +6,38 @@
 #
 alabaster==0.7.16
     # via sphinx
-attrs==22.1.0
+attrs==23.2.0
     # via
     #   -c requirements.txt
     #   pytest
 babel==2.14.0
     # via sphinx
+black==24.1.1
+    # via
+    #   -c requirements.txt
+    #   -r requirements-dev.in
 build==1.0.3
     # via pip-tools
 bump2version==1.0.1
     # via bumpversion
 bumpversion==0.6.0
     # via -r requirements-dev.in
-certifi==2022.9.24
+certifi==2023.11.17
     # via
     #   -c requirements.txt
     #   requests
 cffi==1.16.0
     # via cryptography
-charset-normalizer==2.1.1
+cfgv==3.4.0
+    # via pre-commit
+chardet==4.0.0
     # via
     #   -c requirements.txt
     #   requests
-click==8.1.3
+click==8.1.7
     # via
     #   -c requirements.txt
+    #   black
     #   pip-tools
 coverage[toml]==7.4.1
     # via
@@ -49,9 +56,11 @@ filelock==3.13.1
     # via
     #   tox
     #   virtualenv
-flake8==3.9.1
+flake8==7.0.0
     # via -r requirements-dev.in
-idna==3.4
+identify==2.5.33
+    # via pre-commit
+idna==2.10
     # via
     #   -c requirements.txt
     #   requests
@@ -59,9 +68,10 @@ imagesize==1.4.1
     # via sphinx
 importlib-metadata==7.0.1
     # via
+    #   -c requirements.txt
     #   keyring
     #   twine
-iniconfig==1.1.1
+iniconfig==2.0.0
     # via
     #   -c requirements.txt
     #   pytest
@@ -81,52 +91,63 @@ markdown-it-py==3.0.0
     # via rich
 markupsafe==2.1.4
     # via jinja2
-mccabe==0.6.1
+mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
 more-itertools==10.2.0
     # via jaraco-classes
-mypy==0.720
+mypy==1.8.0
     # via -r requirements-dev.in
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0
     # via
     #   -c requirements.txt
+    #   black
     #   mypy
 nh3==0.2.15
     # via readme-renderer
-packaging==21.3
+nodeenv==1.8.0
+    # via pre-commit
+packaging==23.2
     # via
     #   -c requirements.txt
+    #   black
     #   build
     #   pytest
     #   sphinx
     #   tox
+pathspec==0.12.1
+    # via
+    #   -c requirements.txt
+    #   black
 pip-tools==7.3.0
     # via -r requirements-dev.in
 pkginfo==1.9.6
     # via twine
-platformdirs==2.5.2
+platformdirs==4.2.0
     # via
     #   -c requirements.txt
+    #   black
     #   virtualenv
-pluggy==1.0.0
+pluggy==1.4.0
     # via
     #   -c requirements.txt
     #   pytest
     #   tox
+pre-commit==3.6.0
+    # via -r requirements-dev.in
 py==1.11.0
     # via
     #   -c requirements.txt
     #   pytest
     #   tox
-pycodestyle==2.7.0
+pycodestyle==2.11.1
     # via flake8
 pycparser==2.21
     # via cffi
-pyflakes==2.3.1
+pyflakes==3.2.0
     # via flake8
-pygments==2.13.0
+pygments==2.17.2
     # via
     #   -c requirements.txt
     #   pygments-lexer-solidity
@@ -137,10 +158,6 @@ pygments-lexer-solidity==0.7.0
     # via
     #   -c requirements.txt
     #   -r requirements-dev.in
-pyparsing==3.0.9
-    # via
-    #   -c requirements.txt
-    #   packaging
 pyproject-hooks==1.0.0
     # via build
 pytest==6.2.5
@@ -152,9 +169,13 @@ pytest-cov==4.1.0
     # via -r requirements-dev.in
 pytest-mock==3.12.0
     # via -r requirements-dev.in
+pyyaml==6.0.1
+    # via
+    #   -c requirements.txt
+    #   pre-commit
 readme-renderer==42.0
     # via twine
-requests==2.28.1
+requests==2.25.1
     # via
     #   -c requirements.txt
     #   requests-toolbelt
@@ -174,7 +195,7 @@ six==1.16.0
     #   tox
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==7.1.2
+sphinx==7.2.6
     # via
     #   -r requirements-dev.in
     #   sphinx-rtd-theme
@@ -202,8 +223,10 @@ toml==0.10.2
 tomli==2.0.1
     # via
     #   -c requirements.txt
+    #   black
     #   build
     #   coverage
+    #   mypy
     #   pip-tools
     #   pyproject-hooks
     #   tox
@@ -211,26 +234,29 @@ tox==3.28.0
     # via -r requirements-dev.in
 twine==4.0.2
     # via -r requirements-dev.in
-typed-ast==1.4.3
-    # via mypy
-typing-extensions==4.4.0
+typing-extensions==4.9.0
     # via
     #   -c requirements.txt
+    #   black
     #   mypy
-urllib3==1.26.12
+urllib3==1.26.18
     # via
     #   -c requirements.txt
     #   requests
     #   twine
-virtualenv==20.21.1
-    # via tox
-wheel==0.37.1
+virtualenv==20.25.0
+    # via
+    #   pre-commit
+    #   tox
+wheel==0.42.0
     # via
     #   -c requirements.txt
     #   -r requirements-dev.in
     #   pip-tools
 zipp==3.17.0
-    # via importlib-metadata
+    # via
+    #   -c requirements.txt
+    #   importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
