chore: update github workflow and tox

--- a/.github/workflows/core-ganache-3.12.yaml
+++ b/.github/workflows/core-ganache-3.12.yaml
@@ -1,4 +1,4 @@
-name: Core Ganache (py37)
+name: Core Ganache (py3.12)
 on: ["push", "pull_request"]
 
 env:
@@ -7,11 +7,11 @@ env:
   WEB3_INFURA_PROJECT_ID: ddddf0c53f254d36aa76ce4e3a6a390e
 
 jobs:
-  py37core:
+  py310core:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Cache Solidity Installations
         uses: actions/cache@v2
@@ -22,21 +22,21 @@ jobs:
           key: ${{ runner.os }}-compiler-cache
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
 
       - name: Install Ganache
-        run: npm install -g ganache@7.0.2
+        run: npm install -g ganache@7.9.2
 
-      - name: Setup Python 3.7
-        uses: actions/setup-python@v2
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.7
+          python-version: "3.12"
 
       - name: Install Tox
         run: pip install tox
 
       - name: Run Tox
-        run: tox -e py37
+        run: tox -e py312
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
