--- a/.github/workflows/core-ganache-3.12.yaml
+++ b/.github/workflows/core-ganache-3.12.yaml
@@ -1,44 +1,44 @@
-name: Core Ganache (py3.12)
-on: ["push", "pull_request"]
+# name: Core Ganache (py3.12)
+# on: ["push", "pull_request"]
 
-env:
-  ETHERSCAN_TOKEN: 9MKURTHE8FNA9NRUUJBHMUEVY6IQ5K1EGY
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  WEB3_INFURA_PROJECT_ID: ddddf0c53f254d36aa76ce4e3a6a390e
+# env:
+#   ETHERSCAN_TOKEN: 9MKURTHE8FNA9NRUUJBHMUEVY6IQ5K1EGY
+#   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#   WEB3_INFURA_PROJECT_ID: ddddf0c53f254d36aa76ce4e3a6a390e
 
-jobs:
-  py310core:
-    runs-on: ubuntu-latest
+# jobs:
+#   py310core:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Cache Solidity Installations
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.solcx
-            ~/.vvm
-          key: ${{ runner.os }}-compiler-cache
+#       - name: Cache Solidity Installations
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ~/.solcx
+#             ~/.vvm
+#           key: ${{ runner.os }}-compiler-cache
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
 
-      - name: Install Ganache
-        run: npm install -g ganache@7.9.2
+#       - name: Install Ganache
+#         run: npm install -g ganache@7.9.2
 
-      - name: Setup Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+#       - name: Setup Python 3.12
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.12"
 
-      - name: Install Tox
-        run: pip install tox
+#       - name: Install Tox
+#         run: pip install tox
 
-      - name: Run Tox
-        run: tox -e py312
+#       - name: Run Tox
+#         run: tox -e py312
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./coverage.xml
+#       - name: Upload coverage to Codecov
+#         uses: codecov/codecov-action@v1
+#         with:
+#           file: ./coverage.xml
