--- a/tox.ini
+++ b/tox.ini
@@ -33,13 +33,12 @@ commands =
 
 [testenv:lint]
 deps =
-    black==22.1.0
-    flake8==3.9.1
-    isort==5.8.0
-    mypy==0.720
+    black==24.1.1
+    flake8==7.0.0
+    isort==5.13.2
 basepython=python3
 extras=linter
 commands =
     black --check {toxinidir}/brownie {toxinidir}/tests
-    flake8 {toxinidir}/brownie {toxinidir}/tests
+    flake8 {toxinidir}/brownie
     isort --check-only --diff {toxinidir}/brownie {toxinidir}/tests --skip brownie/__init__.py
