--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ aiohttp==3.9.3
     # via web3
 aiosignal==1.3.1
     # via aiohttp
-asttokens==2.0.5
+asttokens==2.4.1
     # via vyper
 async-timeout==4.0.3
     # via aiohttp
@@ -19,12 +19,12 @@ attrs==23.2.0
     #   jsonschema
     #   pytest
     #   referencing
-base58==2.1.1
-    # via multiaddr
 bitarray==2.9.2
     # via eth-account
 black==24.1.1
     # via -r requirements.in
+cbor2==5.6.1
+    # via vyper
 certifi==2023.11.17
     # via requests
 charset-normalizer==3.3.2
@@ -32,52 +32,48 @@ charset-normalizer==3.3.2
 click==8.1.7
     # via black
 cytoolz==0.12.3
-    # via
-    #   eth-keyfile
-    #   eth-utils
+    # via eth-utils
 dataclassy==0.11.1
     # via eip712
-eip712==0.1.0
+eip712==0.2.4
     # via -r requirements.in
-eth-abi==2.2.0
+eth-abi==5.0.0
     # via
     #   -r requirements.in
     #   eip712
     #   eth-account
     #   eth-event
     #   web3
-eth-account==0.5.9
+eth-account==0.10.0
     # via
     #   -r requirements.in
+    #   eip712
     #   web3
-eth-event==1.2.3
+eth-event==1.2.5
     # via -r requirements.in
-eth-hash[pycryptodome]==0.3.3
+eth-hash[pycryptodome]==0.6.0
     # via
     #   -r requirements.in
+    #   eip712
     #   eth-event
-    #   eth-hash
     #   eth-utils
     #   web3
-eth-keyfile==0.5.1
+eth-keyfile==0.7.0
     # via eth-account
-eth-keys==0.3.4
+eth-keys==0.5.0
     # via
     #   eth-account
     #   eth-keyfile
-eth-rlp==0.2.1
-    # via
-    #   -r requirements.in
-    #   eth-account
-    #   web3
-eth-typing==2.3.0
+eth-rlp==1.0.1
+    # via eth-account
+eth-typing==3.5.2
     # via
     #   eip712
     #   eth-abi
     #   eth-keys
     #   eth-utils
     #   web3
-eth-utils==1.10.0
+eth-utils==2.3.1
     # via
     #   -r requirements.in
     #   eip712
@@ -95,7 +91,7 @@ frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-hexbytes==0.2.3
+hexbytes==0.3.1
     # via
     #   -r requirements.in
     #   eip712
@@ -109,33 +105,30 @@ idna==3.6
     # via
     #   requests
     #   yarl
+importlib-metadata==7.0.1
+    # via vyper
 iniconfig==2.0.0
     # via pytest
-ipfshttpclient==0.8.0a2
-    # via web3
 jsonschema==4.21.1
     # via web3
 jsonschema-specifications==2023.12.1
     # via jsonschema
 lazy-object-proxy==1.10.0
     # via -r requirements.in
-lru-dict==1.3.0
+lru-dict==1.2.0
     # via web3
-multiaddr==0.0.9
-    # via ipfshttpclient
-multidict==6.0.4
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
 mypy-extensions==1.0.0
     # via black
-netaddr==0.10.1
-    # via multiaddr
 packaging==23.2
     # via
     #   black
     #   pytest
-parsimonious==0.8.1
+    #   vyper
+parsimonious==0.9.0
     # via eth-abi
 pathspec==0.12.1
     # via black
@@ -145,7 +138,7 @@ pluggy==1.4.0
     # via pytest
 prompt-toolkit==3.0.43
     # via -r requirements.in
-protobuf==3.19.5
+protobuf==4.25.2
     # via web3
 psutil==5.9.8
     # via -r requirements.in
@@ -160,7 +153,6 @@ py-solc-x==1.1.1
     # via -r requirements.in
 pycryptodome==3.20.0
     # via
-    #   eip712
     #   eth-hash
     #   eth-keyfile
     #   vyper
@@ -181,20 +173,23 @@ pytest-xdist==1.34.0
     # via -r requirements.in
 python-dotenv==0.16.0
     # via -r requirements.in
+pyunormalize==15.1.0
+    # via web3
 pyyaml==6.0.1
     # via -r requirements.in
 referencing==0.33.0
     # via
     #   jsonschema
     #   jsonschema-specifications
+regex==2023.12.25
+    # via parsimonious
 requests==2.31.0
     # via
     #   -r requirements.in
-    #   ipfshttpclient
     #   py-solc-x
     #   vvm
     #   web3
-rlp==2.0.1
+rlp==4.0.0
     # via
     #   -r requirements.in
     #   eth-account
@@ -208,12 +203,9 @@ semantic-version==2.10.0
     #   -r requirements.in
     #   py-solc-x
     #   vvm
-    #   vyper
 six==1.16.0
     # via
     #   asttokens
-    #   multiaddr
-    #   parsimonious
     #   pytest-xdist
 sortedcontainers==2.4.0
     # via hypothesis
@@ -226,20 +218,22 @@ toolz==0.12.1
 tqdm==4.66.1
     # via -r requirements.in
 typing-extensions==4.9.0
-    # via black
+    # via
+    #   black
+    #   eth-rlp
+    #   eth-typing
+    #   web3
 urllib3==2.2.0
     # via requests
-varint==1.0.2
-    # via multiaddr
 vvm==0.1.0
     # via -r requirements.in
-vyper==0.3.7
+vyper==0.3.10
     # via -r requirements.in
 wcwidth==0.2.13
     # via prompt-toolkit
-web3==5.31.4
+web3==6.15.0
     # via -r requirements.in
-websockets==9.1
+websockets==12.0
     # via web3
 wheel==0.42.0
     # via vyper
@@ -247,3 +241,5 @@ wrapt==1.16.0
     # via -r requirements.in
 yarl==1.9.4
     # via aiohttp
+zipp==3.17.0
+    # via importlib-metadata
