fix: tox -e lint

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ current_version = 1001.20.2
 [flake8]
 exclude = tests/data/*
 max-line-length = 100
-ignore = E203,W503
+ignore = E203,E704,W503
 
 [tool:isort]
 force_grid_wrap = 0
