--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -4,10 +4,6 @@ on:
   pull_request:
     branches:
       - master
-    paths:
-      - 'requirements.in'
-      - 'requirements-windows.in'
-      - 'requirements-dev.in'
 
 jobs:
   format:
@@ -28,7 +24,7 @@ jobs:
       run: pip install pip-tools
 
     - name: Run Pip Compile
-      run: pip-compile
+      run: pip-compile -U
 
     - name: Check for changes
       id: changes
