feat(cicd): `black .` github runner

--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -1,4 +1,4 @@
-name: Pip Compile
+name: Repo Chores
 
 on:
   pull_request:
@@ -27,6 +27,9 @@ jobs:
     - name: Install Pip Tools
       run: pip install pip-tools
 
+    - name: Run black .
+      run: black .
+      
     - name: Run Pip Compile
       run: pip-compile -U
 
@@ -45,5 +48,5 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "chore: \`pip-compile\`"
+        git commit -m "chore: \`black .\` and \`pip-compile\`"
         git push
