fix: missing import eth_retry

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ passenv =
     WEB3_INFURA_PROJECT_ID
 deps =
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: coverage==5.2.1
+    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-retry==0.3.4
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
