fix(test): retry tests on intermittent errors (#1846)
* fix(test): retry tests on intermittent errors

* chore: cleanup

* fix: revert cleanup

* chore: `black .` and `pip-compile`

* fix(test): use @auto_retry for all tests that call Contract.from_explorer

* chore: test even more verbosely

* chore: `black .` and `pip-compile`

* fix: missing import eth_retry

* chore: `black .` and `pip-compile`

* chore: run tests with -s flag

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ passenv =
     WEB3_INFURA_PROJECT_ID
 deps =
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: coverage==5.2.1
+    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-retry==0.3.4
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
@@ -21,7 +22,7 @@ deps =
     docs-{local,external}: sphinx_rtd_theme
     docs-{local,external}: pygments_lexer_solidity
 commands =
-    py{310,311,312}: python -m pytest tests/ {posargs} -v
+    py{310,311,312}: python -m pytest tests/ {posargs} -s -vv
     evm-byzantium: python -m pytest tests/ --evm 0.4.22,0.4.26,0.5.0,0.5.17,0.6.3,0.6.9 byzantium 0,10000 -v
     evm-petersburg: python -m pytest tests/ --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
     evm-istanbul: python -m pytest tests/ --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
