feat: implement faster-eth-utils (#1885)
* feat: implement faster-eth-utils

* Update contract.py

* Update account.py

* Update main.py

* Update requirements.in

* chore: `black .` and `pip-compile`

* Update main.py

* chore: `black .` and `pip-compile`

* Update datatypes.py

* Update datatypes.py

* Update requirements.in

* chore: `black .` and `pip-compile`

* Update datatypes.py

* chore: `black .` and `pip-compile`

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/requirements.in
+++ b/requirements.in
@@ -6,7 +6,7 @@ eth-account
 eth-event>=1.2.7,<2
 eth-hash[pycryptodome]
 eth-typing>=4.2.1,<5
-eth-utils
+faster-eth-utils>=4.1.2
 hexbytes
 hypothesis<6.28.0
 lazy-object-proxy>=1.6.0,<2
