--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -38,6 +38,11 @@ jobs:
 
     - name: Run Pip Compile for Dev Deps
       run: pip-compile -U requirements-dev.in
+    
+    - name: Install Mypyc and Compile
+      run: |
+        pip install "mypy[mypyc]==1.16.0" types-PyYAML
+        pip install .
 
     - name: Check for changes
       id: changes
@@ -54,5 +59,5 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "chore: \`black .\` and \`pip-compile\`"
+        git commit -m "chore: \`black .\` and \`pip-compile\` and compile C files for source control"
         git push
